tdf#145205: Mysql/MariaDB, display BIT instead of DATE when its a BIT field

Beware, we just want to display the right info here, BIT management in Mysql/MariaDB
needs some work

There are 2 parts in this patch:
1)
-    if (sType.equalsIgnoreAsciiCase("bit") || sType.equalsIgnoreAsciiCase("bool")
-        || sType.equalsIgnoreAsciiCase("boolean"))
+    if (sType.equalsIgnoreAsciiCase("bit"))
+        return css::sdbc::DataType::BIT;
+    if (sType.equalsIgnoreAsciiCase("bool") || sType.equalsIgnoreAsciiCase("boolean"))
allows to display BIT instead of DATE when editing the table

2)
-            return css::sdbc::DataType::VARCHAR;
+            return css::sdbc::DataType::BIT;
allows to show a checkbox instead of a field where you can type anything when opening the table

Change-Id: Id50882bfab97cc43a1904bfc6eb7256904732bba
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/125429
Tested-by: Jenkins
Reviewed-by: Lionel Mamane <lionel@mamane.lu>